# AutoTestKit

./: .gitignore  JMX_CONVERSION_PRACTICAL_SOP.md  JMX_TO_PYTHON_SOP.md  Jenkinsfile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: code-quality.yml
base/api/: fixtures.py
base/api/services/: base_service.py  elastic_compute_ext_service.py  elastic_compute_k8s_quota_service.py  elastic_compute_k8s_resource_service.py  elastic_compute_native_service.py  elastic_compute_open_service.py  microservices_inner_service.py  microservices_open_service.py  observable_open_service.py  operation_open_service.py  plugin_inner_service.py  plugin_open_service.py  portal_inner_service.py  portal_open_service.py
base/ui/: fixtures.py
base/ui/pages/: base_page.py  login_page.py
config/: config_system.yaml  env_bcv25_arm.yaml  env_sit5.yaml  env_test.yaml  env_test_arm.yaml
core/config/: __init__.py  env_config.py  settings.py  system_config.py
core/log/: logger.py
core/reporting/: __init__.py  allure_helper.py
examples/: allure_helper_demo.py  ui_test_example.py
tests/api/: conftest.py  test_portal_open_service.py  test_portal_openapi.py
tests/api/elastic_compute/: __init__.py  test_ec_extentions_application.py  test_ec_openapi_cluster.py  test_ec_openapi_namespace.py  test_ec_openapi_node.py  test_ec_openapi_pvc_pv.py  test_ec_openapi_resource_collection.py
tests/api/examples/: test_base_service.py  test_portal_inner_service.py  test_portal_open_service.py
tests/api/microservices/: __init__.py  test_microservices_cmf.py  test_microservices_cmf_openapi.py  (+8 more)
tests/ui/: test_login_page.py
utils/: file_helper.py  internet_utils.py
(+16 files in other folders)
