[project]
name = "autotestkit"
version = "1.0.0"
description = "基于 Pytest + Playwright + Requests + Allure 的高性能 UI/API 自动化测试框架"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Testing Framework
    "pytest>=9.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-html>=4.1.1",
    "pytest-rerunfailures>=16.0",
    "pytest-timeout>=2.3.0",
    "pytest-ordering>=0.6",
    "pytest-dependency>=0.6.0",

    # UI Automation
    "playwright>=1.53.0",

    # API Testing
    "requests>=2.31.0",

    # Reporting
    "allure-pytest>=2.15.0",

    # Data Validation
    "jsonschema>=4.20.0",

    # Logging
    "colorlog>=6.8.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
# 性能测试（按需安装：uv sync --extra performance）
performance = [
    "locust>=2.42.5",
]
# 属性测试（按需安装：uv sync --extra property）
property = [
    "hypothesis>=6.92.1",
]
# 开发工具
dev = [
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 项目不是一个可安装的 Python 包，只是测试框架
# 指定需要包含的目录
packages = ["core", "base", "utils", "performance"]

[tool.uv]
cache-dir = ".uv-cache"

[dependency-groups]
dev = [
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
# pytest 配置（如果希望统一到 pyproject.toml，可将 pytest.ini 内容迁移到此处）
# 当前保留 pytest.ini 独立文件，因为部分插件对 pyproject.toml 支持不完整
